<resources>
    <string name="app_name">Translate App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_translate">TranslateActivity</string>
    <string name="inputSource">enter something to translate</string>
    <string name="convert_Button">Convert</string>
    <string name="logout_button">Logout</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="please_enter_valid_username_and_password">Please enter valid username and password</string>


    <string-array name="Spinner2" id="Spinner2">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Japanese</item>
        <item>Hungarian</item>
        <item>Telugu</item>
        <item>Hindi</item>
        <item>Arabic</item>
        <item>Marathi</item>
        <item>Malayalam</item>
        <item>Tamil</item>
    </string-array>

    <string-array name="Spinner3" id="Spinner3">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Japanese</item>
        <item>Hungarian</item>
        <item>Telugu</item>
        <item>Hindi</item>
        <item>Arabic</item>
        <item>Marathi</item>
        <item>Malayalam</item>
        <item>Tamil</item>
    </string-array>
</resources>
