<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_colour"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tutorial.cs5551.com.translateapp.LoginActivity"
    tools:showIn="@layout/activity_login">

    <EditText
        android:id="@+id/txt_uname"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:hint="@string/username_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txt_Pwd"
        android:layout_width="326dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/txt_uname"
        android:layout_alignStart="@+id/txt_uname"
        android:layout_below="@+id/txt_uname"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_Pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:onClick="checkCredentials"
        android:text="@string/sign_in" />

    <TextView
        android:id="@+id/lbl_Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:singleLine="false"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#415ca0" />

    <TextView
        android:id="@+id/lbl_Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:singleLine="false"
        android:text="@string/please_enter_valid_username_and_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#e12c2c"
        android:visibility="invisible" />

</RelativeLayout>
