<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:background="@android:color/background_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tutorial.cs5551.com.translateapp.TranslateActivity"
    tools:showIn="@layout/activity_translate">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="-5dp"
        android:onClick="logOut"
        android:text="@string/logout_button"
        android:visibility="visible" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/home_container"
        android:layout_width="336dp"
        android:layout_height="462dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:weightSum="1"
        tools:context="com.sample.foo.simplewebapi.MainActivity">


        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="303dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.04" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.04" />

        <EditText
            android:id="@+id/inputText"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.04"
            android:ems="10"
            android:hint="@string/inputSource"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/result_Text"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.04"
            android:hapticFeedbackEnabled="false"
            android:textAlignment="center"
            android:textSize="48sp" />

        <Button
            android:id="@+id/btn_Search"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:onClick="translateText"
            android:text="@string/convert_Button"
            android:textColor="#ba6349" />

    </LinearLayout>

</RelativeLayout>
